Modified the section on provisioning dialog. Also tidied the section titles.

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -365,16 +365,14 @@ The parameters are passed to the children based on the method tied to the choice
 
 
 [[example-service-provisioning]]
-=== Example: Creating a Sample Service
+=== Example: Creating a Service
 
-{product-title} provides the ability to define services that can include one or more virtual machines or instances and can be deployed across hybrid environments. Services can be made available to users through the self-service user interface (SUI) that allows users to order predefined IT services without IT operations getting involved.
+{product-title} provides the ability to define services, which can include one or more virtual machines or instances, and can be deployed across hybrid environments. Services can be made available to users through the self-service user interface (SUI) that allows users to order predefined IT services without IT operations getting involved.
 
-==== Creating a Sample Service for Provisioning a Virtual Machine through Red Hat Virtualization (RHV)
+==== Creating a Service for Provisioning a Virtual Machine through Red Hat Virtualization (RHV)
 
 
-The following four items are required to make a service available to users from the {product-title_short} self-service user interface:
-
-. *Provisioning Dialog*: A provisioning dialog presents the basic configuration options for a virtual machine or instance. When you begin the process of provisioning a virtual machine or instance via {product-title_short}, you are presented with a provisioning dialog where you set certain options for the virtual machine or instance. The options presented are dependent on the provider you are using. For instance, a cloud provider might have flavors of instances, whereas an infrastructure provider might allow you to set the memory size or number of CPUs on a virtual machine.
+The following three items are required to make a service available to users from the {product-title_short} self-service user interface:
 
 . *Service Dialog*: A service dialog is where you allow users to configure virtual machine or instance options. A service dialog determines which options users get to change. You can choose the options presented to the user. You could just give them the option to set the service name, or you could have them change all of the provisioning dialog options. 
 
@@ -383,12 +381,12 @@ The following four items are required to make a service available to users from 
 . *Service Catalog Item*: A service catalog item is the actual service which combines a service dialog with a provisioning dialog.
 
 
-.Provisioning Dialog
+.Examining the Provisioning Dialog
 
-Every provider in {product-title_short} comes with a sample provisioning dialog covering the options specific to that provider. To have a look at the sample provisioning dialog for Red Hat Virtualization, go to menu:Automation[Automate > Customization > Provisioning Dialogs > VM Provision] and select *Sample RedHat VM Provisioning Dialog*. This is a textual representation of the dialog you will get when you provision a virtual machine or instance.
+To work with services in CloudForms it is important to understand the concept of provisioning dialogs. Every provider in {product-title_short} comes with a sample provisioning dialog covering the options specific to that provider. A provisioning dialog presents the basic configuration options for a virtual machine or instance. When you begin the process of provisioning a virtual machine or instance via {product-title_short}, you are presented with a provisioning dialog where you set certain options for the virtual machine or instance. The options presented are dependent on the provider you are using. For instance, a cloud provider might have flavors of instances, whereas an infrastructure provider might allow you to set the memory size or number of CPUs on a virtual machine.
 
-. You can start the virtual machine provisioning process by clicking menu:Compute[Infrastructure > Virtual Machines], then click image:2007.png[](*Lifecycle*), and then image:1862.png[](*Provision VMs*).
-. Select the image you are going to use, then click *Continue*. You can go through the steps in the provisioning dialog.
+To have a look at the sample provisioning dialog for Red Hat Virtualization, go to menu:Automation[Automate > Customization > Provisioning Dialogs > VM Provision] and select *Sample RedHat VM Provisioning Dialog*. This is a textual representation of the dialog you will get when you provision a virtual machine or instance.
+
 
 .Create a Service Dialog
 
