added revised diagrams; edited wording in scaling section

--- a/doc-High_Availability_Guide/topics/HA_Roles.adoc
+++ b/doc-High_Availability_Guide/topics/HA_Roles.adoc
@@ -1,9 +1,9 @@
 [[ha_roles]]
 == Scaling a Highly Available {product-title_short} Environment
 
-After creating high availability for the database tier and the user interface tier, the rest of the infrastructure should be sized as appropriate for the roles and the environments that they manage. These roles and tiers use built-in high availability mechanisms like primary, secondary, and tertiary failover or use round robin or most available schemes built into {product-title_short}.
+After creating high availability for the database tier and the user interface tier, the rest of the infrastructure should be sized appropriately for the roles and the environments that they manage. These roles and tiers use built-in high availability mechanisms like primary, secondary, and tertiary failover.
 
-You can configure additional worker appliances as needed using the steps in xref:installation_appliances_addl[] and assign server roles. The {product-title_short} appliances and roles can be configured in any order.
+You can configure additional worker appliances as needed using the steps in xref:installation_appliances_addl[], and then assign zones and server roles. The {product-title_short} appliances and roles can be configured in any order.
 
 /////
 .Considerations
@@ -14,21 +14,12 @@ You can configure additional worker appliances as needed using the steps in xref
 
 /////
 
-The following diagram shows an example of a highly available database configuration with worker appliances configured:
-image:CloudForms_HA_Architecture_431939_0817_ECE-02.png[] 
+The following diagram shows an example of a highly available database configuration containing worker appliances and providers:
+image:CloudForms_HA_Architecture_431939_0917_ECE-02.png[] 
 
 
 See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#regions[Regions] and  https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#servers[Servers] in  _General Configuration_ for more information on configuring servers and roles.
 
 See https://access.redhat.com/documentation/en-us/reference_architectures/2017/html/deploying_cloudforms_at_scale/[Deploying CloudForms at Scale] for further recommendations on scaling your {product-title_short} environment.
 
-
-
-////
-
-https://bugzilla.redhat.com/show_bug.cgi?id=1414214
-
-
-Insert diagram with worker appliances
-////
 
