--- a/doc-High_Availability_Guide/topics/HA_Roles.adoc
+++ b/doc-High_Availability_Guide/topics/HA_Roles.adoc
@@ -14,7 +14,10 @@ You can configure additional worker appliances as needed using the steps in xref
 
 /////
 
-The following diagram shows an example of a highly available database configuration containing worker appliances and providers:
+The following diagram shows an example of a highly available database configuration that contains worker appliances, providers, and the HAProxy load balancer configured in xref:configuring_HAProxy[]. 
+
+The worker appliances in the diagram are labeled by server role (*User Interface*, *Management*, and *Database Ops*) and corresponding zone to show how a highly available environment might be scaled with server roles and zones. 
+
 image:CloudForms_HA_Architecture_431939_0917_ECE-02.png[] 
 
 
