--- a/doc-High_Availability_Guide/topics/Updating_HA.adoc
+++ b/doc-High_Availability_Guide/topics/Updating_HA.adoc
@@ -1,5 +1,5 @@
 [[updating-ha]]
-== Applying Updates in a High Availability Environment
+== Updating a Highly Available {product-title_short} Environment
 
 Applying software package minor updates (referred to as _errata_) to appliances in a high availability environment must be performed in a specific order to avoid migrating your databases to the next major {product-title_short} version.
 
