--- a/doc-High_Availability_Guide/cfme/master.adoc
+++ b/doc-High_Availability_Guide/cfme/master.adoc
@@ -1,6 +1,6 @@
 = High Availability Guide
 :imagesdir: images
-:vernum: 4.5
+:vernum: 4.6
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -17,12 +17,10 @@ include::common/attributes/cfme.adoc[]
 include::topics/Overview.adoc[]
 include::topics/Installation.adoc[]
 include::topics/Database_Failover.adoc[]
+include::topics/HAProxy.adoc[]
+include::topics/HA_Roles.adoc[]
 //Updating_HA is only in CFME as it's concerning subscriptions.
 include::topics/Updating_HA.adoc[]
-
-
-
-
 
 
 
