--- a/doc-High_Availability_Guide/topics/Overview.adoc
+++ b/doc-High_Availability_Guide/topics/Overview.adoc
@@ -1,20 +1,30 @@
 [[Overview]]
 == Environment Overview
 
-This guide describes how to configure and manage database high availability in a {product-title} environment. This configuration allows for disaster mitigation: a failure in the primary database does not result in downtime, as the standby database takes over the failed database’s processes. This is made possible by database replication between two or more database servers. In {product-title_short}, these servers are _database-only {product-title_short} appliances_ which do not have `evmserverd` processes enabled. 
-
-In this configuration, only one database is writable at any given time. This procedure also does not provide scalability or a multi-master database setup. While a {product-title} environment is comprised of an engine tier and a database tier, this configuration affects only the database tier and does not provide load balancing for the appliances.
+This guide describes how to configure and manage database high availability in a {product-title} environment. This configuration allows for disaster mitigation: a failure in the primary database does not result in downtime, as the standby database takes over the failed database’s processes. This is made possible by database replication between two or more database servers. In {product-title_short}, these servers are _database-only {product-title_short} appliances_ which do not have `evmserverd` processes enabled. This is configured from the `appliance_console` menu at the time of deployment. 
 
 This guide describes two types of appliances used in high availability: 
 
 * _Database-only {product-title_short} appliances_, which do not have `evmserverd` processes enabled or a user interface.
 * _{product-title_short} appliances_, which are standard appliances containing a user interface and which have `evmserverd` processes enabled.
 
+ifdef::cfme[]
+Unlike the high availability method in older versions of CloudForms which uses `pacemaker`, the built-in database high availability in CloudForms 4.2 and newer is achieved by `repmgr` database replication with PostgreSQL.
+endif::cfme[]
+
+ifdef::miq[]
+Unlike the high availability method in older versions of ManageIQ which uses pacemaker, the built-in database high availability in this version of ManageIQ is achieved by `repmgr` database replication with PostgreSQL.
+endif::miq[]
+
+
+In this configuration, a failover monitor daemon is configured and running on each {product-title_short} (non-database) appliance. The failover monitor watches the `repmgr` metadata about the database-only appliances present in the cluster. When the primary database-only appliance goes down, the {product-title_short} appliances start polling each of the configured standby database-only appliances to monitor which one comes up as the new primary. The promotion is orchestrated either by `repmgrd` on the database-only appliances or is done manually. When the {product-title_short} appliances find that a standby has been promoted, {product-title_short} reconfigures the setup by writing the new IP address in the `database.yml` file to point to the new primary. 
 
 [NOTE]
 ====
 Manual steps are required to reintroduce the failed database node back as the standby server. See xref:reintroducing_the_failed_node[].
 ====
+
+Note, this procedure also does not provide scalability or a multi-master database setup. While a {product-title_short} environment is comprised of an engine tier and a database tier, this configuration affects only the database tier and does not provide load balancing for the appliances. 
 
 [[requirements]]
 === Requirements
@@ -26,7 +36,7 @@ For a high availability {product-title} environment, you need a virtualization h
 - Two virtual machines for the {product-title_short} appliances
 
 ifdef::cfme[]
-See https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2/paged/deployment-planning-guide/chapter-2-planning[Planning] in the _Deployment Planning Guide_ for information on setting up the correct disk space for the database-only appliances.
+See https://access.redhat.com/documentation/en/red-hat-cloudforms/4.5/paged/deployment-planning-guide/chapter-2-planning[Planning] in the _Deployment Planning Guide_ for information on setting up the correct disk space for the database-only appliances.
 endif::cfme[]
 
 The database-only appliances should reside on a highly reliable local network in the same location.
@@ -48,3 +58,4 @@ ifdef::cfme[]
 Red Hat recommends using a DNS server for a high availability configuration, as DNS names can be updated more quickly than IP addresses when restoring an operation in a different location, network, or datacenter.
 ====
 endif::cfme[]
+
