Added a note about tenants when adding OpenStack providers.
Conflicts:
	common/openstack/adding-an-openstack-cloud-provider.adoc

--- a/common/openstack/adding-an-openstack-cloud-provider.adoc
+++ b/common/openstack/adding-an-openstack-cloud-provider.adoc
@@ -3,9 +3,11 @@ When creating an OpenStack provider in {product-title}, select the OpenStack pro
 When using the `admin` credentials, a user in {product-title} provisions into the `admin` tenant, and sees images, networks, and instances that are associated with the `admin` tenant.
 
 [NOTE]
-=====
+====
+In OpenStack, you must add `admin` as a member of all tenants that users want to access and use in {product-title_short}.
+====
+
 include::tenant-mapping.adoc[]
-=====
 
 [NOTE]
 =====
