Modified the command for restarting appliances

--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -218,7 +218,7 @@ This configures `memcached` to run on `appliance1`, but listen to all servers (-
 . Restart `appliance1`:
 +
 ----
-# systemctl restart appliance1
+# systemctl restart evmserverd
 ----
 
 . Configure `appliance2` to point to `appliance1` by specifying the IP address for `appliance1` in the `memcache_server` line. Configure this in the server's advanced settings by navigating to the settings menu, selecting *Configuration*, then the *Advanced* tab:
@@ -233,7 +233,7 @@ This configures `memcached` to run on `appliance1`, but listen to all servers (-
 . Restart `appliance2`:
 +
 ----
-# systemctl restart appliance2
+# systemctl restart evmserverd
 ----
 
 You can then get an API token from `appliance1`, and use it to access the API from `appliance2`. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/red_hat_cloudforms_rest_api/#using-authentication-tokens[Using Authentication Tokens] in the _REST API_ guide for instructions.
