--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -84,7 +84,7 @@ Alternately, you can refresh some or all repositories from the list view:
 
 [IMPORTANT]
 =====
-If both {product-title_short} and a VMware provider are located in the same IPv6-only network, use a DNS-resolvable hostname for the VMware provider in the _vCenter Host_ field when adding credentials.
+If both {product-title_short} and a VMware provider are located in the same IPv6-only network, use a DNS-resolvable hostname for the VMware provider in the *vCenter Host* field when adding credentials.
 =====
 
 . Navigate to menu:Automation[Ansible > Credentials].
