Implemented peer review feedback.

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -383,9 +383,14 @@ The following three items are required to make a service available to users from
 
 .Examining the Provisioning Dialog
 
-To work with services in CloudForms it is important to understand the concept of provisioning dialogs. Every provider in {product-title_short} comes with a sample provisioning dialog covering the options specific to that provider. A provisioning dialog presents the basic configuration options for a virtual machine or instance. When you begin the process of provisioning a virtual machine or instance via {product-title_short}, you are presented with a provisioning dialog where you set certain options for the virtual machine or instance. The options presented are dependent on the provider you are using. For instance, a cloud provider might have flavors of instances, whereas an infrastructure provider might allow you to set the memory size or number of CPUs on a virtual machine.
+Understanding provisioning dialogs is important to work with services in {product-title_short}. Every provider in {product-title_short} comes with a sample provisioning dialog covering the options specific to that provider. A provisioning dialog presents the basic configuration options for a virtual machine or instance. When you begin the process of provisioning a virtual machine or instance via {product-title_short}, you are presented with a provisioning dialog where you set certain options for the virtual machine or instance. The options presented are dependent on the provider you are using. For instance, a cloud provider might have flavors of instances, whereas an infrastructure provider might allow you to set the memory size or number of CPUs on a virtual machine.
 
-To have a look at the sample provisioning dialog for Red Hat Virtualization, go to menu:Automation[Automate > Customization > Provisioning Dialogs > VM Provision] and select *Sample RedHat VM Provisioning Dialog*. This is a textual representation of the dialog you will get when you provision a virtual machine or instance.
+To see the sample provisioning dialog for Red Hat Virtualization: 
+
+. Navigate to menu:Automation[Automate > Customization].
+. Expand the *Provisioning Dialogs* accordion and select *Sample RedHat VM Provisioning Dialog* under *VM Provision*. 
+
+This is a textual representation of the dialog you will get when you provision a virtual machine.
 
 
 .Create a Service Dialog
@@ -401,7 +406,7 @@ A service dialog contains three components:
 
 * One or more *Tabs*.
 * Inside the tabs, one or more *Boxes*.
-* Inside the boxes, one or more *Elements*. The *Elements* contain methods, like check boxes, drop-down lists or text fields, to fill in the options on the provisioning dialog.
+* Inside the boxes, one or more *Elements*. Elements are controls that accept input. Elements contain methods, like check boxes, drop-down lists or text fields, to fill in the options on the provisioning dialog.
 
 [IMPORTANT]
 ====
@@ -424,7 +429,7 @@ The following procedure outlines how to create a service dialog for your sample 
 .. Click image:1862.png[](*Add*), then image:1862.png[](*Add a New Box to this Tab*).
 .. Enter `Service and VM Name` in *Label*.
 .. Optionally, enter a description for the box in *Description*.
-.. Add a new element for the service name. Elements are controls that accept input.
+.. Add a new element for the service name.
 ... Click image:1862.png[](*Add*), then image:1862.png[](*Add a New Element to this Box*).
 ... Enter `Service Name` in *Label*.
 ... Enter `service_name` in *Name*
