Updated instructions for the modified virtual appliance image. Also added a new section- Create Resources for the Appliance in Azure

--- a/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
+++ b/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
@@ -42,6 +42,7 @@ include::common/initial-login-changepw.adoc[]
 === Appliance Console Command-Line Interface (CLI)
 include::common/appe-appliance-console-cli.adoc[]
 
-
-
+[[storage-sku-types]]
+=== Storage SKU Types
+include::topics/appendix.adoc[]
 
