--- a/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
+++ b/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
@@ -47,15 +47,13 @@ To upload the {product-title} appliance file to Microsoft Azure, ensure the foll
 
 [IMPORTANT]
 ====
-* Azure requires that the uploaded Virtual Hard Disk (VHD) files are in a fixed format. Currently, the Azure Powershell script and Azure CLI do not automatically convert a dynamic .vhd file to fixed during upload. In {product-title_short} 4.5.2 and newer, the virtual appliance image file, `cfme-azure-5.8.2.0-1.x86_64.vhd` and newer, is in a fixed format and can be uploaded to an Azure environment and provisioned without requiring any additional manipulations with the image. 
-
-* The virtual appliance image file in {product-title_short} 4.2 and prior is still dynamic by default. Therefore, the virtual appliance image .vhd file must be first converted from dynamic to fixed, and properly aligned to the nearest 1 MB boundary. Once converted and properly aligned, you can then upload the appliance virtual image .vhd file using either the Azure PowerShell or Azure CLI method. See the _Installing {product-title} on Microsoft Azure_ guide relevant to your environment for the correct steps to upload the {product-title_short} virtual appliance image to Azure.    
+Azure requires that the uploaded Virtual Hard Disk (VHD) files are in a fixed format. The Azure Powershell script and Azure CLI do not automatically convert a dynamic .vhd file to fixed during upload. For {product-title_short} 4.5.2 and newer, the virtual appliance image file (`cfme-azure-5.8.2.0-1.x86_64.vhd` and newer) is available for download in a fixed format, and can be uploaded to an Azure environment and provisioned without requiring any additional manipulations with the image.   
 ====
 
 [[create-resources-for-appliance-in-azure]]
 ==== Create Resources for the Appliance in Microsoft Azure
 
-Complete the following steps to create resources in Microsoft Azure. Note than if you already have resources you can use, you can skip this section and go directly to xref:uploading-the-appliance-using-azure-powershell-script[] or xref:uploading-the-appliance-using-azure-cli[].
+Complete the following steps to create resources in Microsoft Azure. Note than if you already have resources you can use, you can skip this section and go directly to either xref:uploading-the-appliance-using-azure-powershell-script[] or xref:uploading-the-appliance-using-azure-cli[] depending on your preferred method for uploading the {product-title_short} appliance to Azure.
 
 [NOTE]
 ====
@@ -214,7 +212,7 @@ Example:
 
 [NOTE]
 ====
-Make sure Azure Resource Manager cmdlets are available. See *To install the cmdlets* section in https://msdn.microsoft.com/en-us/library/mt125356.aspx[Azure Resource Manager Cmdlets].
+Make sure Azure Resource Manager cmdlets are available; see link:https://msdn.microsoft.com/en-us/library/mt125356.aspx[Azure Resource Manager Cmdlets] for the latest installation information.
 ====
 
 . Log in to *Azure Resource Manager* using the cmdlet:
